--- a/driver/platform/win/resource.rc
+++ b/driver/platform/win/resource.rc
@@ -50,34 +50,34 @@ END
 // Dialog
 //
 
-IDD_DIALOG1 DIALOGEX 0, 0, 195, 247
+IDD_DIALOG1 DIALOGEX 0, 0, 195, 253
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Create datasource for ClickHouse"
+CAPTION "Create data source for ClickHouse"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Ok",IDOK,126,228,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,18,228,50,14
-    LTEXT           "Name",IDC_STATIC,18,12,44,8
-    EDITTEXT        IDC_DSN_NAME,78,12,96,14,ES_AUTOHSCROLL
-    LTEXT           "Host",IDC_STATIC,18,84,16,8
-    EDITTEXT        IDC_SERVER_HOST,78,84,97,14,ES_AUTOHSCROLL
-    LTEXT           "Port",IDC_STATIC,18,102,14,8
-    EDITTEXT        IDC_SERVER_PORT,78,102,98,14,ES_AUTOHSCROLL
-    LTEXT           "Database",IDC_STATIC,18,120,32,8
-    EDITTEXT        IDC_DATABASE,78,120,98,14,ES_AUTOHSCROLL
-    LTEXT           "User",IDC_STATIC,18,162,16,8
-    EDITTEXT        IDC_USER,78,162,98,14,ES_AUTOHSCROLL
-    LTEXT           "Password",IDC_STATIC,18,180,32,8
-    EDITTEXT        IDC_PASSWORD,78,180,98,14,ES_PASSWORD | ES_AUTOHSCROLL
-    LTEXT           "Description",IDC_STATIC,18,30,44,8
-    EDITTEXT        IDC_DESCRIPTION,78,30,96,14,ES_AUTOHSCROLL
-    LTEXT           "Timeout",IDC_STATIC,18,204,26,8
-    EDITTEXT        IDC_TIMEOUT,78,204,98,14,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "SSLMode",IDC_STATIC,18,138,32,8
-    EDITTEXT        IDC_SSLMODE,78,138,98,14,ES_AUTOHSCROLL
-    LTEXT           "Url",IDC_STATIC,18,54,16,8
-    EDITTEXT        IDC_URL,78,54,96,14,ES_AUTOHSCROLL
-    LTEXT           "OR",IDC_STATIC,42,72,26,8
+    EDITTEXT        IDC_DSN_NAME,78,12,98,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_DESCRIPTION,78,29,98,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_URL,78,46,98,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SERVER_HOST,78,92,98,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SERVER_PORT,78,110,98,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_DATABASE,78,128,98,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_SSLMODE,78,146,98,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_USER,78,163,98,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_PASSWORD,78,181,98,14,ES_PASSWORD | ES_AUTOHSCROLL
+    EDITTEXT        IDC_TIMEOUT,78,199,98,14,ES_AUTOHSCROLL | ES_NUMBER
+    DEFPUSHBUTTON   "Ok",IDOK,126,229,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,18,229,50,14
+    LTEXT           "Name:",IDC_STATIC,18,15,44,8
+    LTEXT           "Description:",IDC_STATIC,18,32,44,8
+    LTEXT           "URL:",IDC_STATIC,18,49,44,8
+    LTEXT           "Or...",IDC_STATIC,78,72,17,8
+    LTEXT           "Host:",IDC_STATIC,18,95,44,8
+    LTEXT           "Port:",IDC_STATIC,18,113,44,8
+    LTEXT           "Database:",IDC_STATIC,18,131,44,8
+    LTEXT           "SSLMode:",IDC_STATIC,18,149,44,8
+    LTEXT           "User:",IDC_STATIC,18,166,44,8
+    LTEXT           "Password:",IDC_STATIC,18,184,44,8
+    LTEXT           "Timeout:",IDC_STATIC,18,202,44,8
 END
 
 
@@ -91,10 +91,10 @@ GUIDELINES DESIGNINFO
 BEGIN
     IDD_DIALOG1, DIALOG
     BEGIN
-        LEFTMARGIN, 18
-        RIGHTMARGIN, 188
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 240
+        LEFTMARGIN, 5
+        RIGHTMARGIN, 190
+        TOPMARGIN, 5
+        BOTTOMMARGIN, 243
     END
 END
 #endif    // APSTUDIO_INVOKED
