--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -1,3 +1,11 @@
+get_filename_component (_current_dir_name "${CMAKE_CURRENT_LIST_DIR}" NAME)
+if (CMAKE_FOLDER)
+    set (CMAKE_FOLDER "$CMAKE_FOLDER/${_current_dir_name}")
+else ()
+    set (CMAKE_FOLDER "${_current_dir_name}")
+endif ()
+unset (_current_dir_name)
+
 if (CLICKHOUSE_ODBC_TEST)
     set (BUILD_GMOCK ON CACHE BOOL "")
     set (INSTALL_GTEST OFF CACHE BOOL "")
@@ -11,11 +19,6 @@ if (CLICKHOUSE_ODBC_TEST)
     set_target_properties(gtest_main PROPERTIES INTERPROCEDURAL_OPTIMIZATION OFF)
     set_target_properties(gmock PROPERTIES INTERPROCEDURAL_OPTIMIZATION OFF)
     set_target_properties(gmock_main PROPERTIES INTERPROCEDURAL_OPTIMIZATION OFF)
-
-    set_target_properties(gtest PROPERTIES FOLDER contrib)
-    set_target_properties(gtest_main PROPERTIES FOLDER contrib)
-    set_target_properties(gmock PROPERTIES FOLDER contrib)
-    set_target_properties(gmock_main PROPERTIES FOLDER contrib)
 
     if (USE_INTERNAL_NANOODBC_LIBRARY)
         set (NANODBC_DISABLE_EXAMPLES 1 CACHE INTERNAL "")
@@ -51,5 +54,8 @@ if (USE_INTERNAL_POCO_LIBRARY)
         # Remove pthread from linking poco's Net
         set_property(TARGET Net PROPERTY INTERFACE_LINK_LIBRARIES "")
         set_property(TARGET Foundation PROPERTY INTERFACE_LINK_LIBRARIES "")
+    endif ()
+    if (TARGET uninstall AND CMAKE_FOLDER)
+        set_target_properties(uninstall PROPERTIES FOLDER "${CMAKE_FOLDER}")
     endif ()
 endif ()
