Install TDC file to sample-config since it needs adjusting almost always before use

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,7 +168,7 @@ endif()
 
 install(
     FILES packaging/clickhouse-odbc.tdc
-    DESTINATION ${CMAKE_INSTALL_DOCDIR}/config
+    DESTINATION ${CMAKE_INSTALL_DOCDIR}/sample-config
     COMPONENT Documentation
 )
 
