--- a/driver/platform/config_cmake.h.in
+++ b/driver/platform/config_cmake.h.in
@@ -8,7 +8,7 @@
 #define VERSION_STRING "@PROJECT_VERSION@"
 
 #define SYSTEM_STRING "@CMAKE_SYSTEM@"
-#define ODBC_IMPL "@ODBC_IMPL@"
+#define ODBC_PROVIDER "@ODBC_PROVIDER@"
 
 #cmakedefine01 USE_SSL
 #cmakedefine01 USE_DEBUG_17
