--- a/.travis.yml
+++ b/.travis.yml
@@ -279,6 +279,7 @@ before_install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     sudo apt-get update -q
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+    cd "$(brew --repo)" && git fetch && git reset --hard origin/master && cd -
     brew update
   elif [[ "$TRAVIS_OS_NAME" == "windows" ]]; then
     : # choco upgrade
@@ -288,7 +289,7 @@ install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pyodbc
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-    brew install --force cmake perl python@2
+    brew install cmake perl python@2
     PERL_MM_USE_DEFAULT=1 cpan -T DBD::ODBC
     if [[ "$ODBC_PROVIDER" == "iODBC" ]]; then
       # It looks like older version of pyodbc works with iODBC out of the box on macOS:
