--- a/.travis.yml
+++ b/.travis.yml
@@ -289,6 +289,7 @@ install: |-
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
     sudo apt-get install -y build-essential cmake perl libdbi-perl libdbd-odbc-perl python python-pyodbc
   elif [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+    brew uninstall --force --ignore-dependencies cmake perl python@2
     brew install cmake perl python@2
     PERL_MM_USE_DEFAULT=1 cpan -T DBD::ODBC
     if [[ "$ODBC_PROVIDER" == "iODBC" ]]; then
