Add Iphlpapi as a dependecny for Poco::Foundation for Windows builds

--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -82,6 +82,14 @@ if (OPENSSL_FOUND)
     endif ()
 endif()
 
+if (MSVC)
+    if (TARGET Foundation)
+        set_property(TARGET Foundation APPEND PROPERTY INTERFACE_LINK_LIBRARIES Iphlpapi)
+    elseif (TARGET Poco::Foundation)
+        set_property(TARGET Poco::Foundation APPEND PROPERTY INTERFACE_LINK_LIBRARIES Iphlpapi)
+    endif ()
+endif ()
+
 if (CH_ODBC_ENABLE_TESTING)
     if (CH_ODBC_PREFER_BUNDLED_GOOGLETEST OR NOT GTEST_FOUND)
         if (NOT GTEST_FOUND AND NOT CH_ODBC_PREFER_BUNDLED_GOOGLETEST)
